# milton-old

./: .gitignore  README.md  TODO.md  comments.md  dataset-metadata  dataset-metadata-client_wal_index  extract_data.py  popular.txt  pyproject.toml  requirements.txt  sample.json  series_data.json  series_data_with_count.json  temp.txt  test_script.py
SGDataDownloader/: classes.py  database_connect.py  download_all_SG_data.py  download_dataseries.py  get_metadata.py  list_of_aggregations.json  list_of_dataseries.json  list_of_datasets.json  main.py  search_data_cli.py  utils.py
ai_tools/: database_selector.py
backend/: main.py
data/: Monthly_Consumer_Price_Index_Accommodation.csv  Monthly_Consumer_Price_Index_Air_Fares.csv  Monthly_Consumer_Price_Index_Alcoholic_Drinks_Tobacco.csv  Monthly_Consumer_Price_Index_All_Items.csv  Monthly_Consumer_Price_Index_All_Items_Less_Imputed_Rentals_On_OwnerOccupied_Accommodation.csv  Monthly_Consumer_Price_Index_Beer.csv  Monthly_Consumer_Price_Index_Books_&_Stationery.csv  Monthly_Consumer_Price_Index_Bread.csv  Monthly_Consumer_Price_Index_Bus_Train_Fares.csv  Monthly_Consumer_Price_Index_Butter_Other_Fats.csv  Monthly_Consumer_Price_Index_Cakes_Pastries.csv  Monthly_Consumer_Price_Index_Catered_Food.csv  Monthly_Consumer_Price_Index_Charges_To_Places_Of_Interest.csv  Monthly_Consumer_Price_Index_Childrens_Clothing.csv  Monthly_Consumer_Price_Index_Childrens_Footwear.csv  Monthly_Consumer_Price_Index_Cigarettes.csv  Monthly_Consumer_Price_Index_Cinema_Tickets.csv  Monthly_Consumer_Price_Index_Clothing.csv  (+224 more)
download/: main.py  (+4 more)
(+113 files in other folders)
