[tool.poetry]
name = "econdatagpt"
version = "0.1.0"
description = "The world's data is now alive"
authors = ["pradyuprasad <pradyu.sp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
