[tool.poetry]
name = "EconDataGPT"
version = "0.1.0"
description = "Automated macroeconomic analysis agent"
authors = ["Pradyumna <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
groq = "^0.7.0"
requests = "^2.32.2"
asyncio = "^3.4.3"
python-dotenv = "^1.0.1"
pydantic = "^2.7.1"
pytest = "^8.2.1"
openai = "^1.30.1"
libsql-experimental = "^0.0.34"
fastapi = "^0.111.0"
pandas = "^2.2.2"
ruff = "^0.4.8"
mypy = "^1.10.0"
types-requests = "^2.32.0.20240602"
pyright = "^1.1.366"
spacy = "^3.7.5"
memory-profiler = "^0.61.0"
pip-check-reqs = "^2.5.3"
pipreqs = {version = "^0.5.0", python = ">=3.8.1,<3.13"}
instructor = "^1.3.3"
gunicorn = "^22.0.0"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
pip-check-reqs = "^2.5.3"
pipdeptree = "^2.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

